fix for wrappers colliding on small viewports

--- a/src/components/landing-page/landing.css
+++ b/src/components/landing-page/landing.css
@@ -73,9 +73,10 @@
 }
 
 .human3 {
-  width: 50%;
+  width: 90%;
   margin-top: -10.4rem;
 }
+
 @media only screen and (min-width: 640px) {
   .human3 {
     margin-top: -10.1rem;
